# tardigrade_constitutive_tools

./: CMakeLists.txt  README.rst  conda-build.txt  environment.txt  reduced_environment.txt
.github/workflows/: conda-recipe-test.yml  github-test-headeronly.yml  github-test.yml
docs/: CMakeLists.txt  Doxyfile.in  api.rst
recipe/: meta.yaml  recipe.yaml
src/cpp/: CMakeLists.txt  tardigrade_constitutive_tools.cpp  tardigrade_constitutive_tools.h  tardigrade_constitutive_tools.tpp
src/cpp/tests/: CMakeLists.txt  test_tardigrade_constitutive_tools.cpp
src/cython/: CMakeLists.txt  main.pyx  setup.py.in  tardigrade_constitutive_tools_python.pxd  tardigrade_constitutive_tools_python.pyx
src/python/: CMakeLists.txt  MANIFEST.in  pyproject.toml.in
src/python/tardigrade_constitutive_tools/: __init__.py
src/python/tardigrade_constitutive_tools/tests/: test_tardigrade_constitutive_tools.py
